bindings/go/wdissector/wdissector.h

#define WD_TYPE_FIELD 0
#define WD_TYPE_GROUP 1
#define WD_TYPE_LAYER 2
// Add appropraite types for python module generation
#define uint8_t unsigned char
#define uint16_t unsigned short
#define uint32_t unsigned int
#define uint64_t unsigned long
#define int64_t signed long
#define int32_t signed int
#define gboolean unsigned char
#define gchar char
#define guint8 unsigned char
#define guint32 unsigned int
#define guchar unsigned char
#define guint unsigned int
#define guint64 unsigned long
#define field_info void
#define header_field_info void
#define gpointer void
typedef struct _GByteArray GByteArray;
struct _GPtrArray {
    gpointer *pdata;
    guint len;
};
struct _GByteArray {
    guint8 *data;
    guint len;
};
typedef struct _proto_node {
    struct _proto_node *first_child;
    struct _proto_node *last_child;
    struct _proto_node *next;
    struct _proto_node *parent;
    void *finfo;
    void *tree_data;
} proto_node;
/** A protocol tree element. */
typedef proto_node proto_tree;
void packet_navigate(uint32_t skip_layers, uint32_t skip_groups, uint8_t (*callback)(proto_tree *, uint8_t, uint8_t *)); // Iterates every field of the packet
const char *packet_read_field_encoding_name(field_info *field_match);
const char *packet_read_field_string(field_info *field_match);
unsigned char *packet_read_field_ustring(field_info *field_match);
GByteArray *packet_read_field_bytes(field_info *field_match);
uint32_t packet_read_field_uint32(field_info *field_match);
int32_t packet_read_field_int32(field_info *field_match);
uint64_t packet_read_field_uint64(field_info *field_match);
int64_t packet_read_field_int64(field_info *field_match);
const char *packet_read_value_to_string(uint32_t value, const header_field_info *hfi); // Get packet field string value from header info
// --- Summary related functions ---
const char *packet_show();
const char *packet_summary();
const char *packet_layers();
const char *packet_layer(uint8_t layer_index);
uint32_t packet_layers_count();
const char *packet_relevant_fields();
char *packet_description();
uint8_t packet_direction();
const char *packet_protocol();
const char *packet_show_pdml();
uint8_t packet_field_summary(uint8_t *raw_packet, uint32_t packet_length, const char *field_name);
// --- Misc ---
void wd_log_g(const char *msg);
void wd_log_y(const char *msg);
void wd_log_r(const char *msg);
void set_wd_log_g(void (*wd_func)(const char *));
void set_wd_log_y(void (*wd_func)(const char *));
void set_wd_log_r(void (*wd_func)(const char *));