bindings/python/wdissector.py


# src/wdissector.h: 219
for _lib in _libs.values():
    if not _lib.has("packet_read_field_encoding_name", "cdecl"):
        continue
    packet_read_field_encoding_name = _lib.get("packet_read_field_encoding_name", "cdecl")
    packet_read_field_encoding_name.argtypes = [POINTER(None)]
    packet_read_field_encoding_name.restype = c_char_p
    break

# src/wdissector.h: 220
for _lib in _libs.values():
    if not _lib.has("packet_read_field_string", "cdecl"):
        continue
    packet_read_field_string = _lib.get("packet_read_field_string", "cdecl")
    packet_read_field_string.argtypes = [POINTER(None)]
    packet_read_field_string.restype = c_char_p
    break

# src/wdissector.h: 221
for _lib in _libs.values():
    if not _lib.has("packet_read_field_ustring", "cdecl"):
        continue
    packet_read_field_ustring = _lib.get("packet_read_field_ustring", "cdecl")
    packet_read_field_ustring.argtypes = [POINTER(None)]
    packet_read_field_ustring.restype = POINTER(c_ubyte)
    break

# src/wdissector.h: 222
for _lib in _libs.values():
    if not _lib.has("packet_read_field_bytes", "cdecl"):
        continue
    packet_read_field_bytes = _lib.get("packet_read_field_bytes", "cdecl")
    packet_read_field_bytes.argtypes = [POINTER(None)]
    packet_read_field_bytes.restype = POINTER(GByteArray)
    break

# src/wdissector.h: 223
for _lib in _libs.values():
    if not _lib.has("packet_read_field_uint32", "cdecl"):
        continue
    packet_read_field_uint32 = _lib.get("packet_read_field_uint32", "cdecl")
    packet_read_field_uint32.argtypes = [POINTER(None)]
    packet_read_field_uint32.restype = c_uint
    break

# src/wdissector.h: 224
for _lib in _libs.values():
    if not _lib.has("packet_read_field_int32", "cdecl"):
        continue
    packet_read_field_int32 = _lib.get("packet_read_field_int32", "cdecl")
    packet_read_field_int32.argtypes = [POINTER(None)]
    packet_read_field_int32.restype = c_int
    break

# src/wdissector.h: 225
for _lib in _libs.values():
    if not _lib.has("packet_read_field_uint64", "cdecl"):
        continue
    packet_read_field_uint64 = _lib.get("packet_read_field_uint64", "cdecl")
    packet_read_field_uint64.argtypes = [POINTER(None)]
    packet_read_field_uint64.restype = c_ulong
    break

# src/wdissector.h: 226
for _lib in _libs.values():
    if not _lib.has("packet_read_field_int64", "cdecl"):
        continue
    packet_read_field_int64 = _lib.get("packet_read_field_int64", "cdecl")
    packet_read_field_int64.argtypes = [POINTER(None)]
    packet_read_field_int64.restype = c_long
    break

# src/wdissector.h: 227
for _lib in _libs.values():
    if not _lib.has("packet_read_value_to_string", "cdecl"):
        continue
    packet_read_value_to_string = _lib.get("packet_read_value_to_string", "cdecl")
    packet_read_value_to_string.argtypes = [c_uint, POINTER(None)]
    packet_read_value_to_string.restype = c_char_p
    break

# src/wdissector.h: 230
for _lib in _libs.values():
    if not _lib.has("packet_show", "cdecl"):
        continue
    packet_show = _lib.get("packet_show", "cdecl")
    packet_show.argtypes = []
    packet_show.restype = c_char_p
    break

# src/wdissector.h: 231
for _lib in _libs.values():
    if not _lib.has("packet_summary", "cdecl"):
        continue
    packet_summary = _lib.get("packet_summary", "cdecl")
    packet_summary.argtypes = []
    packet_summary.restype = c_char_p
    break

# src/wdissector.h: 232
for _lib in _libs.values():
    if not _lib.has("packet_layers", "cdecl"):
        continue
    packet_layers = _lib.get("packet_layers", "cdecl")
    packet_layers.argtypes = []
    packet_layers.restype = c_char_p
    break

# src/wdissector.h: 233
for _lib in _libs.values():
    if not _lib.has("packet_layer", "cdecl"):
        continue
    packet_layer = _lib.get("packet_layer", "cdecl")
    packet_layer.argtypes = [c_ubyte]
    packet_layer.restype = c_char_p
    break

# src/wdissector.h: 234
for _lib in _libs.values():
    if not _lib.has("packet_layers_count", "cdecl"):
        continue
    packet_layers_count = _lib.get("packet_layers_count", "cdecl")
    packet_layers_count.argtypes = []
    packet_layers_count.restype = c_uint
    break

# src/wdissector.h: 235
for _lib in _libs.values():
    if not _lib.has("packet_relevant_fields", "cdecl"):
        continue
    packet_relevant_fields = _lib.get("packet_relevant_fields", "cdecl")
    packet_relevant_fields.argtypes = []
    packet_relevant_fields.restype = c_char_p
    break

# src/wdissector.h: 236
for _lib in _libs.values():
    if not _lib.has("packet_description", "cdecl"):
        continue
    packet_description = _lib.get("packet_description", "cdecl")
    packet_description.argtypes = []
    if sizeof(c_int) == sizeof(c_void_p):
        packet_description.restype = ReturnString
    else:
        packet_description.restype = String
        packet_description.errcheck = ReturnString
    break

# src/wdissector.h: 237
for _lib in _libs.values():
    if not _lib.has("packet_direction", "cdecl"):
        continue
    packet_direction = _lib.get("packet_direction", "cdecl")
    packet_direction.argtypes = []
    packet_direction.restype = c_ubyte
    break

# src/wdissector.h: 238
for _lib in _libs.values():
    if not _lib.has("packet_protocol", "cdecl"):
        continue
    packet_protocol = _lib.get("packet_protocol", "cdecl")
    packet_protocol.argtypes = []
    packet_protocol.restype = c_char_p
    break

# src/wdissector.h: 239
for _lib in _libs.values():
    if not _lib.has("packet_show_pdml", "cdecl"):
        continue
    packet_show_pdml = _lib.get("packet_show_pdml", "cdecl")
    packet_show_pdml.argtypes = []
    packet_show_pdml.restype = c_char_p
    break

# src/wdissector.h: 240
for _lib in _libs.values():
    if not _lib.has("packet_field_summary", "cdecl"):
        continue
    packet_field_summary = _lib.get("packet_field_summary", "cdecl")
    packet_field_summary.argtypes = [POINTER(c_ubyte), c_uint, String]
    packet_field_summary.restype = c_ubyte
    break

# src/wdissector.h: 243
for _lib in _libs.values():
    if not _lib.has("wd_log_g", "cdecl"):
        continue
    wd_log_g = _lib.get("wd_log_g", "cdecl")
    wd_log_g.argtypes = [String]
    wd_log_g.restype = None
    break

# src/wdissector.h: 244
for _lib in _libs.values():
    if not _lib.has("wd_log_y", "cdecl"):
        continue
    wd_log_y = _lib.get("wd_log_y", "cdecl")
    wd_log_y.argtypes = [String]
    wd_log_y.restype = None
    break

# src/wdissector.h: 245
for _lib in _libs.values():
    if not _lib.has("wd_log_r", "cdecl"):
        continue
    wd_log_r = _lib.get("wd_log_r", "cdecl")
    wd_log_r.argtypes = [String]
    wd_log_r.restype = None
    break

# src/wdissector.h: 246
for _lib in _libs.values():
    if not _lib.has("set_wd_log_g", "cdecl"):
        continue
    set_wd_log_g = _lib.get("set_wd_log_g", "cdecl")
    set_wd_log_g.argtypes = [CFUNCTYPE(UNCHECKED(None), String)]
    set_wd_log_g.restype = None
    break

# src/wdissector.h: 247
for _lib in _libs.values():
    if not _lib.has("set_wd_log_y", "cdecl"):
        continue
    set_wd_log_y = _lib.get("set_wd_log_y", "cdecl")
    set_wd_log_y.argtypes = [CFUNCTYPE(UNCHECKED(None), String)]
    set_wd_log_y.restype = None
    break

# src/wdissector.h: 248
for _lib in _libs.values():
    if not _lib.has("set_wd_log_r", "cdecl"):
        continue
    set_wd_log_r = _lib.get("set_wd_log_r", "cdecl")
    set_wd_log_r.argtypes = [CFUNCTYPE(UNCHECKED(None), String)]
    set_wd_log_r.restype = None
    break

# src/wdissector.h: 12
try:
    WD_TYPE_FIELD = 0
except:
    pass

# src/wdissector.h: 13
try:
    WD_TYPE_GROUP = 1
except:
    pass

# src/wdissector.h: 14
try:
    WD_TYPE_LAYER = 2
except:
    pass

uint8_t = c_ubyte# src/wdissector.h: 33

uint16_t = c_ushort# src/wdissector.h: 34

uint32_t = c_uint# src/wdissector.h: 35

uint64_t = c_ulong# src/wdissector.h: 36

int64_t = c_long# src/wdissector.h: 37

int32_t = c_int# src/wdissector.h: 38

gboolean = c_ubyte# src/wdissector.h: 39

gchar = c_char# src/wdissector.h: 40

guint8 = c_ubyte# src/wdissector.h: 41

guint32 = c_uint# src/wdissector.h: 42

guchar = c_ubyte# src/wdissector.h: 43

guint = c_uint# src/wdissector.h: 44

guint64 = c_ulong# src/wdissector.h: 45

field_info = None# src/wdissector.h: 46

header_field_info = None# src/wdissector.h: 47

gpointer = None# src/wdissector.h: 48

_GPtrArray = struct__GPtrArray# src/wdissector.h: 103

_GByteArray = struct__GByteArray# src/wdissector.h: 108

_proto_node = struct__proto_node# src/wdissector.h: 113

# No inserted files

# No prefix-stripping

